--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>HybridJsplusts</title>
+  <title>AngularjsToAngular</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <div class="view-container">
-    <div ng-view class="view-frame"></div>
-  </div>
+  <app-root></app-root>
 </body>
 </html>
