--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <phonecat-app></phonecat-app>
+  <div class="view-container">
+    <div ng-view class="view-frame"></div>
+  </div>
 </body>
 </html>
